[package]
name = "future-impl"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.8", features = ["full"]}
reqwest = { version = "0.11", features = ["blocking"] }
thiserror = "1.0.26"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde_json = "1.0.64"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.51"
dyn-clone = "1.0.4"
futures = "0.3.16"