[package]
name = "execution-engine"
description = "Toca Execution Engine implemented using Futures and async/await"
version = "0.1.2"
edition = "2018"
authors = ["James Swash<james.swash@hotmail.co.uk>"]
keywords = ["toca", "executionengine"]
repository = "https://github.com/james-swash/impl-futures"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/execution-engine"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.8", features = ["full"]}
reqwest = { version = "0.11", features = ["blocking"] }
thiserror = "1.0.26"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde_json = "1.0.64"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.51"
dyn-clone = "1.0.4"
futures = "0.3.16"
rand = { version = "0.8.0", features = ["std_rng"] }
nats = { version = "0.18.1"}
eval = "0.4.3"
